fixed layout issues

--- a/src/components/HomePage/Homepage.scss
+++ b/src/components/HomePage/Homepage.scss
@@ -78,6 +78,7 @@
 .data__wrapper {
   width: 100%;
   padding: 1rem 1.3rem;
+  overflow-y: scroll;
 
   h2 {
     margin-bottom: 15px;
